--- a/angular.json
+++ b/angular.json
@@ -62,9 +62,14 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+              "browserTarget": "app:build",
+              "proxyConfig": "src/proxy.conf.json"
+    },
           "configurations": {
             "production": {
               "browserTarget": "project:build:production"
+              
             },
             "development": {
               "browserTarget": "project:build:development"
